<resources>
    <string name="app_name">528Express</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_deposit">Deposit</string>
    <string name="drawer_item_logout">Sign out</string>
    <string name="make_payment">Make Payment</string>
    <string name="scan">Scan</string>
    <string name="code">Code</string>
    <string name="pay">Pay</string>
    <string name="title_activity_payment_success">Payment Successfully</string>
    <string name="thanks">Thank YOU!</string>
    <string name="thank_descriptiong">Your payment was successfully.</string>
    <string name="go">Go</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="make_money">Make Money</string>
    <string name="login">Login</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="thankyou">Thank You</string>
    <string name="enter_valid_password">Your password is not complete.Please click to your password number.</string>
    <string name="str_continue">Please click to continue</string>
    <string name="give_password">Welcome to Make Money. Please click to your password number.</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="invalid_username">Please enter valid data.</string>
    <string name="invalid_password">Passwords must be at least 6 characteristics.</string>
    <string name="invalid_phone">Phone must be at least 6 characteristics.</string>
    <string name="title_activity_cargo_place">CargoPlaceActivity</string>
    <string name="title_activity_cargo_receive_place">CargoReceivePlaceActivity</string>
    <string name="title_activity_delivery_company">Choose Delivery Company</string>
    <string name="invalid_message">require</string>
    <string name="title_activity_final_confirm">FinalConfirmActivity</string>
    <string name="title_activity_thank_you">ThankYouActivity</string>
    <string name="title_activity_my_orders">MyOrdersActivity</string>
    <string name="title_activity_my_pending_cargo">MyPendingCargoActivity</string>
    <string name="title_activity_my_progressing_cargo">MyProgressingCargoActivity</string>
    <string name="title_activity_my_delivered_cargo">MyDeliveredCargoActivity</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="password_donotmatch">Do not match two password</string>
</resources>
