<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.smk.ExpressShipper528.PaymentSuccessActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorBlack"
                android:text="@string/thanks"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/thank_descriptiong"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorBlack"
                android:text="Paid: 1000 MMK"
                android:id="@+id/txt_paid_amount" />




        </LinearLayout>


        <Button
            android:layout_width="@dimen/btn_scan_w"
            android:layout_height="@dimen/btn_scan_h"
            android:background="@drawable/btn_circle"
            android:text="@string/go"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:id="@+id/btn_go" />

    </RelativeLayout>

</LinearLayout>
