<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.smk.ExpressShipper528.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <com.smk.customview.ClearableEditText
            android:id="@+id/edt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="@dimen/btn_scan_w"
                android:layout_height="@dimen/btn_scan_h"
                android:text="@string/scan"
                android:background="@drawable/btn_circle"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_scan" />

            <Button
                android:layout_width="@dimen/btn_pay_w"
                android:layout_height="@dimen/btn_pay_h"
                android:text="@string/pay"
                android:background="@drawable/btn_circle_fill"
                android:textColor="@color/colorWhite"
                android:enabled="false"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/btn_pay" />

            <Button
                android:layout_width="@dimen/btn_scan_w"
                android:layout_height="@dimen/btn_scan_h"
                android:text="@string/code"
                android:background="@drawable/btn_circle"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_code" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
